Encryption gate: every-node init, decrypt-or-fail symmetry
Two halves of the consumer-side gap that the reviewer caught.

The initialize call moves from masterOperation to the @Inject(optional=true)
setter, so it fires on every node where Guice constructs the action with
an EncryptionService binding — not only the master that handled the PUT.
Without this, FROM <dataset> on a data node hit a null holder and the
helper silently no-op'd, passing an EncryptedData carrier through to the
SDK as opaque junk.

decryptInPlace now refuses to pass an EncryptedData instance to the
connector when no EncryptionService is bound. It throws 503 instead —
symmetric with the PUT-side encrypt-or-fail rule. Plaintext-only settings
still flow through on an unbound holder because there's nothing to decrypt.

Includes a TODO(#149194) note in DataSourceCredentials: the singleton
holder shape mirrors the same per-project mismatch the linked issue
flags inside PrimaryEncryptionKeyService. When the service becomes
project-aware, the static seam needs to become per-call lookup.

Tests inverted: testUnboundEncryptionServiceFailsLoudWhenAnyEncryptedCarrierPresent
expects 503; testUnboundServiceWithNoEncryptedValuesIsAllowedThrough
covers the plaintext-only fallthrough.